--- a/debsoc.html
+++ b/debsoc.html
@@ -5,7 +5,7 @@
         h4 { text-decoration: underline; color: rgb(216, 20, 20); text-align: center;}
       </style>
         
-        <link href = 'style.css' rel="stylesheet">
+        <link href = 'style 1.css' rel="stylesheet">
         <title>
 
         </title>
